更新过时的反射创建实例的方法